<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="100dp">
            <View android:layout_width="match_parent" android:layout_height="match_parent"
                  android:background="@android:color/holo_blue_light"
                android:alpha="0.4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History:"/>

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:src="@drawable/ic_help_outline_black_24dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/help_history"/>

            <LinearLayout
                android:id="@+id/past_tweets_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"/>
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/current_tweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/fetch_tweet_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fetch Tweet!"/>

            <Button
                android:id="@+id/fetch_last_two_tweets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fetch Last two Tweets!"/>
        </LinearLayout>


        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_gravity="top|right"
                   android:src="@drawable/ic_help_outline_black_24dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginRight="5dp"
                   android:id="@+id/help_login"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                        android:id="@+id/container">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="UserName:"/>
            <EditText android:id="@+id/user_name" android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="Password:"/>
            <EditText android:id="@+id/user_password" android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textWebPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/user_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_user_in"/>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_gravity="top|right"
                   android:src="@drawable/ic_help_outline_black_24dp"
                   android:layout_marginTop="5dp"
                   android:layout_marginRight="5dp"
                   android:id="@+id/help_url"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/some_url"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/request_website_button"
            android:text="Request"/>
        </LinearLayout>

        <FrameLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content">
            <View android:layout_width="match_parent" android:layout_height="match_parent"
                  android:background="@android:color/holo_blue_light"
                  android:alpha="0.4"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/webpage_text"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
